<resources>
    <string name="app_name">BlackSpark</string>
    <string name="cmd_turn_right">R</string>
    <string name="cmd_turn_left">L</string>
    <string name="cmd_stop">S</string>
    <string name="cmd_move_forward">F</string>
    <string name="cmd_move_backward">B</string>
    <string name="cmd_connect">Connect</string>
    <string name="cmd_disconnect">Disconnect</string>
    <string name="init_text">Console</string>
    <string name="btn_bluetooth_search">Search for devices</string>
    <string name="btn_bluetooth_stop_search">Stop searching</string>
    <string name="label_device_name">Device name:</string>
    <string name="label_device_address">Device address:</string>
    <string name="connect_blt_icon_description">Connect to device</string>
    <string name="btn_state_connecting">Connecting</string>
    <string name="btn_state_connected">Disconnect</string>
    <string name="btn_state_disconnected">Connect</string>
</resources>
