<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1">

    <LinearLayout
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btnConnect"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cmd_connect" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="272dp"
        android:layout_height="150dp"
        android:scrollbarAlwaysDrawVerticalTrack="true"
        android:layout_marginStart="50dp"
        android:layout_weight="1">

        <Button
            android:id="@+id/btnStop"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cmd_stop"
            android:background="@android:color/black"
            android:textColor="@android:color/background_light"/>

        <Button
            android:id="@+id/btnForward"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/cmd_move_forward"
            android:background="@android:color/holo_green_light"
            android:textColor="@android:color/background_light" />

        <Button
            android:id="@+id/btnBackward"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cmd_move_backward"
            android:layout_alignParentBottom="true"
            android:background="@android:color/holo_green_light"
            android:textColor="@android:color/background_light" />

        <Button
            android:id="@+id/btnLeft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cmd_turn_left"
            android:layout_centerVertical="true"
            android:background="?android:attr/colorEdgeEffect"
            android:textColor="@android:color/background_light" />

        <Button
            android:id="@+id/btnRight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:text="@string/cmd_turn_right"
            android:background="?android:attr/colorEdgeEffect"
            android:textColor="@android:color/background_light" />

    </RelativeLayout>


</LinearLayout>